k8s/pod-rstudio.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: postgres-rstudio
  namespace: kooplex-veo
spec:
  hostname: postgres-rstudio
  containers:
  - image: kooplex/k8plex-ei-rstudio-basic
    command:
      - sleep
      - "36000"
    name: postgres-rstudio
    volumeMounts:
      - mountPath: /x_scripts
        name: pv-x
        subPath: scripts
      - mountPath: /x_cov
        name: pv-x
        subPath: cov
      - mountPath: /x_vcf
        name: pv-x
        subPath: vcf
  volumes:
    - name: pv-x
      persistentVolumeClaim:
        claimName: pvc-kooplex
