k8s/pod-shell.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: postgres-shell
  namespace: kooplex-veo
spec:
  hostname: postgres-shell
  containers:
  - image: veo.vo.elte.hu:5000/k8plex:rshiny-python
    command:
      - sleep
      - infinity
    name: postgres-shell
    volumeMounts:
      - mountPath: /mnt
        name: pv-x
  volumes:
    - name: pv-x
      persistentVolumeClaim:
        claimName: pvc-raw
