k8s/postgres.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-kooplex
  namespace: kooplex-veo
spec:
  selector:
    name: lbl-postgres
  ports:
    - name: postgres
      protocol: TCP
      port: 5432
      targetPort: 5432
---
apiVersion: v1
kind: Pod
metadata:
  name: postgres-kooplex
  namespace: kooplex-veo
  labels:
    name: lbl-postgres
spec:
  containers:
  - image: postgres:11.12
    name: postgres
    resources:
      requests:
        memory: "10G"
      limits:
        memory: "11G"
    ports:
      - containerPort: 5432
        name: postgres
    volumeMounts:
      - mountPath: /var/lib/postgresql/data
        name: svcdata
        subPath: data
  volumes:
    - name: svcdata
      persistentVolumeClaim:
        claimName: pvc-postgres-ssd
