k8s/postgres_prod.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-kooplex-prod
  namespace: coveo-db-staging
spec:
  ports:
    - name: port-prod
      protocol: TCP
      port: 5433
      targetPort: 5432
  selector:
    app: app-prod
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres-kooplex-prod
  namespace: coveo-db-staging
spec:
  serviceName: "postgres"
  podManagementPolicy: "Parallel"
  replicas: 1
  selector:
    matchLabels:
      app: app-prod
  template:
    metadata:
      labels:
        app: app-prod
    spec:
      containers:
      - name: postgres-prod
        image: postgres:11.12
        ports:
          - containerPort: 5433
            name: port-prod
        volumeMounts:
        - name: nfs
          mountPath: /volume
      volumes:
        - name: nfs
          persistentVolumeClaim:
            claimName: nfs
