k8s/postgres_staging.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-kooplex-staging
  namespace: kooplex-veo
spec:
  ports:
    - name: port-staging
      protocol: TCP
      port: 5431
      targetPort: 5432
  selector:
    app: app-staging
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres-kooplex-staging
  namespace: kooplex-veo
spec:
  serviceName: "postgres"
  podManagementPolicy: "Parallel"
  replicas: 1
  selector:
    matchLabels:
      app: app-staging
  template:
    metadata:
      labels:
        app: app-staging
    spec:
      containers:
      - name: postgres-staging
        image: postgres:11.12
        ports:
          - containerPort: 5431
            name: port-staging
        volumeMounts:
        - name: nfs
          mountPath: /var/lib/postgresql/data_staging
          subPath: staging
        - name: nfs
          mountPath: /volume
      volumes:
        - name: nfs
          persistentVolumeClaim:
            claimName: pvc-postgres-ssd
