k8s/report.yaml
apiVersion: v1
kind: Service
metadata:
  name: report-0
  namespace: kooplex-veo
spec:
  selector:
    lbl: lbl-report-0
  ports:
    - name: http
      protocol: TCP
      port: 3838
      targetPort: 3838
---
apiVersion: v1
kind: Pod
metadata:
  labels:
    lbl: lbl-report-0
  name: report-0
  namespace: kooplex-veo
spec:
  containers:
  - env:
    - name: LANG
      value: en_US.UTF-8
    - name: REPORT_NAME
      value: helloworld
    image: veo.vo.elte.hu:5000/k8plex-report-shiny
    imagePullPolicy: Always
    name: report-0
    ports:
    - containerPort: 3838
      name: shinyreport
      protocol: TCP
    resources: {}
    volumeMounts:
    - mountPath: /srv/report/helloworld
      name: pv
      readOnly: true
      subPath: repo/app/helloworld
    - mountPath: /srv/report/report-1
      name: pv
      readOnly: true
      subPath: repo/app/report-1
  restartPolicy: Always
  volumes:
  - name: pv
    persistentVolumeClaim:
      claimName: pvc-raw
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: report-0
  namespace: kooplex-veo
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: kooplex-ebi.vo.elte.hu
    http:
      paths:
      - path: /report
        pathType: Prefix
        backend:
          serviceName: report-0
          servicePort: 3838
